--- a/src/app/Modules/contacts/contacts.component.scss
+++ b/src/app/Modules/contacts/contacts.component.scss
@@ -119,7 +119,7 @@
     width: 100%;
     background: $color_white;
     @include font(Montserrat, normal, 400, 1.8rem, 150%, 0em, $color_darkgrey);
-    padding: 3.1rem 0 1.8rem 2.9rem;
+    padding: 3.1rem 0 1.4rem 2.9rem;
     border: 1px solid $color_lightgrey;
     border-radius: 4px;
 }
@@ -208,7 +208,31 @@ input[type="number"]:focus {
     margin-top: 2.5rem;
     margin-left: 2rem;
 }
-
+.has-error {
+    border: 1px solid $color_pink;
+    border-radius: 4px;
+}
+.container__error {
+    display: inline-block;
+    @include font(Montserrat, normal, 400, 1.2rem, 150%, 0em, $color_black);
+    color: $color_red;
+    width: 30rem;
+}
+.alert-name {
+    position: relative;
+    left: 31rem;
+    bottom: 5rem;
+}
+.alert-phone-number {
+    position: relative;
+    left: 28.5rem;
+    bottom: 5rem;
+}
+.alert-text-message {
+    position: relative;
+    left: 29.5rem;
+    bottom: 14.5rem;
+}
 @media (max-width: 1200px) {
     .container__img {
         width: 80rem;
