--- a/src/app/Modules/registration/registration.component.html
+++ b/src/app/Modules/registration/registration.component.html
@@ -104,5 +104,17 @@
             <img id="google" src="../../../assets/img-registration/flat-color-icons_google.png" alt="google">
             <span class="container__signin-google">sign in with Google</span>
         </button>
+        <div [@divTrigger]="clickedDivState">
+            <div class="container__popup-exit" (click)="closeMenu()"><img src="../../../assets/img-registration/x.png"
+                    alt="close"></div>
+            <p class="container__popup-text1">Your message was sent successfully!</p>
+            <p class="container__popup-text2">We will contact you shortly!</p>
+        </div>
+        <div [@divTriggerError]="clickedDivErr">
+            <div class="container__popup-exit" (click)="closeMenu()"><img src="../../../assets/img-registration/x.png"
+                    alt="close"></div>
+            <p class="container__popup-text11">An error occurred while sending the message.</p>
+            <p class="container__popup-text21">Please, try again.</p>
+        </div>
     </div>
 </div>
